working but optimization needed

--- a/index.html
+++ b/index.html
@@ -8,40 +8,40 @@
 </head>
 <body>
     <div class="container">
-        <div class="key">
+        <div class="key" id="A">
             <kbd>A</kbd>
             <p>CLAP</p>
         </div>
 
-        <div class="key">
+        <div class="key" id="S">
             <kbd>S</kbd>
             <p>HIHAT</p>
         </div>
-        <div class="key">
+        <div class="key" id="D">
             <kbd>D</kbd>
             <p>KICK</p>
         </div>
-        <div class="key">
+        <div class="key" id="F">
             <kbd>F</kbd>
             <p>OPENHAT</p>
         </div>
-        <div class="key">
+        <div class="key" id="G">
             <kbd>G</kbd>
             <p>BOOM</p>
         </div>
-        <div class="key">
+        <div class="key" id="H">
             <kbd>H</kbd>
             <p>RIDE</p>
         </div>
-        <div class="key">
+        <div class="key" id="J">
             <kbd>J</kbd>
             <p>SNARE</p>
         </div>
-        <div class="key">
+        <div class="key" id="K">
             <kbd>K</kbd>
             <p>TOM</p>
         </div>
-        <div class="key">
+        <div class="key" id="L">
             <kbd>L</kbd>
             <p>TINK</p>
         </div>
@@ -52,9 +52,9 @@
     <audio src="audio/01 - JavaScript Drum Kit_sounds_openhat.wav" data-key="70"></audio>
     <audio src="audio/01 - JavaScript Drum Kit_sounds_boom.wav" data-key="71"></audio>
     <audio src="audio/01 - JavaScript Drum Kit_sounds_ride.wav" data-key="72"></audio>
-    <audio src="audio/01 - JavaScript Drum Kit_sounds_snare.wav" data-key="73"></audio>
-    <audio src="audio/01 - JavaScript Drum Kit_sounds_tom.wav" data-key="74"></audio>
-    <audio src="audio/01 - JavaScript Drum Kit_sounds_tink.wav" data-key="75"></audio>
+    <audio src="audio/01 - JavaScript Drum Kit_sounds_snare.wav" data-key="74"></audio>
+    <audio src="audio/01 - JavaScript Drum Kit_sounds_tom.wav" data-key="75"></audio>
+    <audio src="audio/01 - JavaScript Drum Kit_sounds_tink.wav" data-key="76"></audio>
 
     <script src="script.js"></script>
 </body>
