properly comparison add. Issue fixed

--- a/index.html
+++ b/index.html
@@ -8,40 +8,40 @@
 </head>
 <body>
     <div class="container">
-        <div class="key" id="A">
+        <div class="key" data-key="65">
             <kbd>A</kbd>
             <p>CLAP</p>
         </div>
-
-        <div class="key" id="S">
+        
+        <div class="key" data-key="83">
             <kbd>S</kbd>
             <p>HIHAT</p>
         </div>
-        <div class="key" id="D">
+        <div class="key" data-key="68">
             <kbd>D</kbd>
             <p>KICK</p>
         </div>
-        <div class="key" id="F">
+        <div class="key" data-key="70">
             <kbd>F</kbd>
             <p>OPENHAT</p>
         </div>
-        <div class="key" id="G">
+        <div class="key" data-key="71">
             <kbd>G</kbd>
             <p>BOOM</p>
         </div>
-        <div class="key" id="H">
+        <div class="key" data-key="72">
             <kbd>H</kbd>
             <p>RIDE</p>
         </div>
-        <div class="key" id="J">
+        <div class="key" data-key="74">
             <kbd>J</kbd>
             <p>SNARE</p>
         </div>
-        <div class="key" id="K">
+        <div class="key" data-key="75">
             <kbd>K</kbd>
             <p>TOM</p>
         </div>
-        <div class="key" id="L">
+        <div class="key" data-key="76">
             <kbd>L</kbd>
             <p>TINK</p>
         </div>
